// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should not render without crumbs 1`] = `<DocumentFragment />`;

exports[`Breadcrumbs should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-3 text-sm undefined text-theme-secondary-text"
    data-testid="breadcrumbs__wrapper"
  >
    <div
      class="sc-AxirZ eKWnGz"
      height="24"
      width="13"
    >
      <svg>
        arrow-left.svg
      </svg>
    </div>
    <div
      class="space-x-3"
    >
      <a
        class="text-theme-secondary-text"
        href="/dashboard"
      >
        <span>
          Dashboard
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs should render with custom classes 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-3 text-sm class-name text-theme-neutral"
    data-testid="breadcrumbs__wrapper"
  >
    <div
      class="sc-AxirZ eKWnGz"
      height="24"
      width="13"
    >
      <svg>
        arrow-left.svg
      </svg>
    </div>
    <div
      class="space-x-3"
    >
      <a
        class=""
        href="/wallets"
      >
        <span>
          Wallets
        </span>
      </a>
      <span>
        <div
          class="sc-AxjAm gHUxAL border-theme-neutral-300 dark:border-theme-neutral-800"
          type="vertical"
        />
      </span>
    </div>
    <div
      class="space-x-3"
    >
      <a
        class="text-theme-secondary-text"
        href="/wallets/my_wallet"
      >
        <span>
          My Wallet
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
